--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </div>
                 <div class="d-grid gap-2">
                     <button class="btn btn-info" type="button" id="btnAgregar">Guardar</button>
-                    <button class="btn btn-secondary" type="button" id="btnBorrarTodo">Borrar todo</button>
+                    <button class="btn btn-warning" type="button" id="btnBorrarTodo">Borrar todo</button>
                 </div>
             </div>
             <div class="col-md-12 mt-4" id="divPeliculas">
